<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item android:id="@+id/estacionFragment"
            android:icon="@drawable/icon_estacion"
            android:title="@string/menu_estacion"/>

        <item android:id="@+id/ubicacionFragment"
            android:icon="@drawable/icon_ubicacion"
            android:title="@string/menu_ubicacion"/>

        <item
            android:id="@+id/inicioFragment"
            android:icon="@drawable/icon_inicio"
            android:title="@string/menu_inicio" />

        <item android:id="@+id/horarioFragment"
            android:icon="@drawable/icon_horarios"
            android:title="@string/menu_horario"/>

        <item android:id="@+id/ofertaFragment"
            android:icon="@drawable/icon_oferta"
            android:title="@string/menu_oferta"/>
    </group>
</menu>