<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/inicioFragment">

    <fragment
        android:id="@+id/inicioFragment"
        android:name="sv.edu.utec.gasolinera_interfaz.other.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/estacionFragment"
        android:name="sv.edu.utec.gasolinera_interfaz.fragment_clases.EstacionFragment"
        android:label="@string/menu_estacion"
        tools:layout="@layout/fragment_estacion" >
        <action
            android:id="@+id/action_estacionFragment_to_mantenimientoFragment2"
            app:destination="@id/mantenimientoFragment" />
        <action
            android:id="@+id/action_estacionFragment_to_estacionDetalleFragment"
            app:destination="@id/estacionDetalleFragment" />
    </fragment>
    <fragment
        android:id="@+id/ubicacionFragment"
        android:name="sv.edu.utec.gasolinera_interfaz.other.UbicacionFragment"
        android:label="@string/menu_ubicacion"
        tools:layout="@layout/fragment_ubicacion" />
    <fragment
        android:id="@+id/horarioFragment"
        android:name="sv.edu.utec.gasolinera_interfaz.other.HorarioFragment"
        android:label="@string/menu_horario"
        tools:layout="@layout/fragment_horario" />
    <fragment
        android:id="@+id/ofertaFragment"
        android:name="sv.edu.utec.gasolinera_interfaz.other.OfertaFragment"
        android:label="@string/menu_oferta"
        tools:layout="@layout/fragment_oferta" />
    <fragment
        android:id="@+id/estacionDetalleFragment"
        android:name="sv.edu.utec.gasolinera_interfaz.fragment_clases.EstacionDetalleFragment"
        android:label="fragment_estacion_detalle"
        tools:layout="@layout/fragment_estacion_detalle" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="sv.edu.utec.gasolinera_interfaz.other.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registrarseFragment"
            app:destination="@id/registrarseFragment" />
    </fragment>
    <fragment
        android:id="@+id/registrarseFragment"
        android:name="sv.edu.utec.gasolinera_interfaz.other.RegistrarseFragment"
        android:label="fragment_registrarse"
        tools:layout="@layout/fragment_registrarse" >
        <action
            android:id="@+id/action_registrarseFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/mantenimientoFragment"
        android:name="sv.edu.utec.gasolinera_interfaz.fragment_clases.MantenimientoFragment"
        android:label="fragment_mantenimiento"
        tools:layout="@layout/fragment_mantenimiento" />
</navigation>