<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_clases.EstacionDetalleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@color/headTable_grey">

        <TextView
            android:id="@+id/tituloDetalleEstacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nomEstacion"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textSize="18dp"/>

        <ImageView
            android:id="@+id/imagenDetalleEstacion"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:contentDescription="Descripción del contenido de la imagen"
            android:src="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/nomUbiDetalleEstacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nomUbiEstacion"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/ubicacionDetalleEstacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ubiEstacion"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15dp"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:text="@string/tipEstacion"
                    android:gravity="center"
                    android:padding="4dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18dp"/>
                <TextView
                    android:text="@string/preEstacion"
                    android:gravity="center"
                    android:padding="4dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18dp"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:text="@string/diEstacion"
                    android:gravity="center"
                    android:padding="4dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/precioEstacion1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dip"
                    android:text="$pre"
                    android:textColor="@color/black"
                    android:textSize="15dp"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:text="@string/reEstacion"
                    android:gravity="center"
                    android:padding="4dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/precioEstacion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dip"
                    android:text="$pre"
                    android:textColor="@color/black"
                    android:textSize="15dp"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:text="@string/esEstacion"
                    android:gravity="center"
                    android:padding="4dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/precioEstacion3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dip"
                    android:text="$pre"
                    android:textColor="@color/black"
                    android:textSize="15dp"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>

</FrameLayout>